--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+  <link rel="icon" type="image/ico" href="/src/assets/logo-dfb0da44.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="ChatGPT-web - a simple one-page web interface to the OpenAI ChatGPT API" />
+  <meta name="description" content="dotGTP - a simple one-page web interface to the OpenAI ChatGPT API" />
   <meta name="mobile-web-app-capable" content="yes" />
-  <title>ChatGPT-web</title>
+  <title>dotGTP</title>
 </head>
 
 <body>
